# meeting-agent

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_STATUS.md  README.md  SETUP.md  config.yaml  docker-compose.yml  main.py  pyproject.toml
api/: main.py  tasks.py
api/routes/: jobs.py  meetings.py  upload.py
capture/: __init__.py  file_loader.py  mic_recorder.py  screen_recorder.py  system_audio.py
cli/: main.py
delivery/: __init__.py  approver.py  email_sender.py
delivery/templates/: followup.html
examples/: simple_processing.py
intelligence/: __init__.py  pipeline.py  schemas.py
intelligence/chains/: __init__.py  action_items.py  decisions.py  summarize.py
processing/: __init__.py  diarizer.py  preprocessor.py  transcriber.py  vad.py
scripts/: quickstart.sh
storage/: __init__.py  database.py  notion_writer.py  obsidian_writer.py
tests/: test_basic.py
widget/: __init__.py  app.py
