[project]
name = "meeting-agent"
version = "0.2.0"
description = "AI-powered meeting transcription and intelligence agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # ── capture layer ──────────────────────────────────────────────────────
    "sounddevice>=0.5.0",
    "ffmpeg-python>=0.2.0",
    "soundcard>=0.4.2",
    "pydub>=0.25.1",

    # ── STT — faster-whisper (NOT openai-whisper) ──────────────────────────
    # CTranslate2 backend: 4-6x faster, int8 CPU quantization, VAD built-in.
    # distil-large-v3 is the recommended default model.
    "faster-whisper>=1.0.3",

    # ── hardware detection (for auto model selection) ──────────────────────
    "psutil>=5.9.0",

    # ── intelligence layer ─────────────────────────────────────────────────
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-ollama>=0.2.0",
    "pydantic>=2.0.0",

    # ── async safety in Celery / threads ──────────────────────────────────
    "nest-asyncio>=1.6.0",

    # ── storage ────────────────────────────────────────────────────────────
    "sqlmodel>=0.0.21",

    # ── delivery ───────────────────────────────────────────────────────────
    "jinja2>=3.1.0",
    "aiosmtplib>=3.0.0",

    # ── API + background tasks ─────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "celery>=5.4.0",
    "redis>=5.0.0",

    # ── CLI ────────────────────────────────────────────────────────────────
    "typer>=0.12.0",
    "rich>=13.0.0",

    # ── utils ──────────────────────────────────────────────────────────────
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
diarization = [
    "pyannote-audio>=3.3.0",
    "torch>=2.0.0",
]
notion = [
    "notion-client>=2.2.0",
]
ollama = [
    "ollama>=0.3.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "httpx>=0.27.0",   # for FastAPI test client
]

[project.scripts]
meeting-agent  = "cli.main:app"
meeting-widget = "widget.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# widget is now included — was missing before
packages = [
    "capture",
    "processing",
    "intelligence",
    "storage",
    "delivery",
    "api",
    "cli",
    "widget",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]